--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>home</title>
     <script src="index.js" defer></script>
-    <link rel="stylesheet" href="index.css">
+    <script src="/Users/jerry/Downloads/jquery-3.6.1.js"></script>
+    <link rel="stylesheet" type="text/css" href="../static/index.css"?ver=1>
 </head>
 <body>
   <header>
@@ -12,7 +13,7 @@
   <main>
     <form>
         <div>
-            <button value="login" onclick="window.open('Login.html', 'window_name', 'width=430, height=500, location=no, status=no, scrollbars=yes');">log in</button>
+            <a href="http://localhost:8877/login">로그인</a>
         </div>
     </form>
   </main>
