--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,8 +5,8 @@
     <title>login</title>
     <!--<script src="./login.js"></script>-->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <link rel="stylesheet" href="login.css">
-    <meta id="_csrf" name="_csrf" content="${_csrf.token}" />
+    <!--<link rel="stylesheet" href="login.css">-->
+    <meta id="_csrf" name="csrf-token" content="${csrf_token()}" />
     <meta id="_csrf_header" name="_csrf_header" content="${_csrf.headerName}" />
 </head>
 <body>
@@ -25,30 +25,27 @@
 <script>
     let frm = document.getElementById('loginForm');
     let btn = document.getElementById('loginBtn');
-$(function () {
-    var token = $("input[name='_csrf']").val();
-    var header = "X-CSRF-TOKEN";
-    $(document).ajaxSend(function(e, xhr, options) {
-        xhr.setRequestHeader(header, token);
+    $(function () {
+        var token = $("input[name='_csrf']").val();
+        var header = "X-CSRF-TOKEN";
+        $(document).ajaxSend(function(e, xhr, options) {
+            xhr.setRequestHeader(header, token);
+        });
     });
-});
     btn.onclick = function () {
         let name = frm.name.value;
         let age = frm.age.value;
-        let data = {"name": name, "age": age};
-        console.log(data);
+        let loginData = {"name": name, "age": age};
+        console.log(loginData);
         $.ajax({
-            type: "POST",
-            url: "/login",
-            data: JSON.stringify(data),
+            type: "get",
+            url: "http://localhost:8877/login",
+            data: loginData,
             contentType: "application/json; charset=utf-8",
-            dataType: "json",
-            beforeSend : function(xhr){
-                xhr.setRequestHeader("${_csrf.headerName}", "${_csrf.token}");
-               },
+            dataType: "text",
             success: function (response) {
                 console.log(response);
-                if (response.result === 'success') {
+                if (result === 'success') {
                     alert('로그인 성공');
                     location.href = '/index';
                 } else {
